--- a/index.html
+++ b/index.html
@@ -11,38 +11,18 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
-
-
-      <!-- Add a label for 'fullname'-->
-
-      <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <!-- Include the place holder text "Enter Name" and make this input required -->
-
-
-      <!-- Add a label for 'email'-->
-
-      <!-- Add a email input with the id and name attributes set to 'email' -->
-      <!-- Include the place holder text "Enter Email" and make this input required -->
-
-
-      <!-- Add a label for 'phone'-->
-
-      <!-- Add a telephone input with the id and name attributes set to 'phone' -->
-      <!-- Include the place holder text "Enter Telephone (optional)" -->
-
-
-      <!-- Add a label for 'message'-->
-
-      <!-- Add a textarea tag with the id and name attributes set to 'message' -->
-      <!-- Include the place holder text "Enter Message" -->
-
-
-      <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
-
-      <!-- Add an input with the type set to 'submit' -->
-
+    <form>
+    <label>Fullname</label>
+    <input type= "text" name="fullname" id="fullname" placeholder="Enter Name" required />
+    <label>Email</label>
+    <input type= "email" id="email" name="email" placeholder="Enter Email" required />  
+    <label>Phone</label>
+    <input type= "tel" id="phone" name="phone" placeholder="Enter Telephone" />
+    <label>Message</label>
+    <input type="textarea" id="message" name="message" placeholder="Enter Message" />
+    <input type="checkbox" id="checkbox" />
+    <input type="submit" value="Submit" />
+    </form>
     
   </body>
 </html>
